--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -137,6 +137,7 @@
 
             $('#notify-span').show();
             $('#notify-loader').hide();
+            document.getElementById('emailtonotify').value="";
         });
     }
 </script>
