--- a/templates/employer/index.html.twig
+++ b/templates/employer/index.html.twig
@@ -190,20 +190,19 @@
                         <div class="alt-features-item">
                             <div class="alt-features-icon"><span class="icon-search"></span></div>
                             <h3 class="alt-features-title font-alt">Job Search Engines</h3>Syndicate your vacancies
-                            to more than 10 job search engines we work with – including Indeed, Adzuna, Jobrapido and
-                            more.
+                            to more than 10 job search engines.
                         </div>
                         <div class="alt-features-item">
                             <div class="alt-features-icon"><span class="icon-alarmclock"></span></div>
                             <h3 class="alt-features-title font-alt">Applicant Tracking System</h3>Improving your whole
                             recruitment process
-                            used by brands across the UK, our applicant tracking system helps you filter, screen, invite
-                            to interview, and much more. Find out more at www.rfunl.com
+                            used by brands across India and abroad, our applicant tracking system helps you filter, screen, invite
+                            to interview, and much more.
                         </div>
                         <div class="alt-features-item">
                             <div class="alt-features-icon"><span class="icon-facebook"></span></div>
                             <h3 class="alt-features-title font-alt">Social Media</h3>Communicating your vacancy
-                            to our 20,000+ jobseeker following on social media to give your positions extra promotion.
+                            to our jobseeker following on social media to give your positions extra promotion.
                         </div>
                         <div class="alt-features-item">
                             <div class="alt-features-icon"><span class="icon-newspaper"></span></div>
