--- a/templates/employerbase.html.twig
+++ b/templates/employerbase.html.twig
@@ -51,6 +51,9 @@
 <script src="/assets/lib/simple-text-rotator/jquery.simple-text-rotator.min.js"></script>
 <script src="/assets/js/plugins.js"></script>
 <script src="/assets/js/main.js"></script>
+<script type="text/javascript"
+        src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyB7iYeVpuQ0vMoW0JSzTgwhxY7C3QccZ7g"></script>
+
 <script>
     function showtoast() {
         var x = document.getElementById("snackbar");
