--- a/templates/employerfooter.html.twig
+++ b/templates/employerfooter.html.twig
@@ -12,49 +12,13 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-sm-3">
-                <div class="widget">
-                    <h5 class="widget-title font-alt">By Regions</h5>
-                    <ul class="icon-list">
-                        <li><a href="#">Banglore</a></li>
-                        <li><a href="#">Hassan</a></li>
-                        <li><a href="#">Karkala</a></li>
-                        <li><a href="#">Mangalore</a></li>
-                        <li><a href="#">Kundapura</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="widget">
-                    <h5 class="widget-title font-alt">Job Types</h5>
-                    <ul class="icon-list">
-                        <li><a href="#">Full Time Job</a></li>
-                        <li><a href="#">Part Time Job</a></li>
-                        <li><a href="#">Temporary Job</a></li>
-                        <li><a href="#">Internship Job</a></li>
-                        <li><a href="#">Developer</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="widget">
-                    <h5 class="widget-title font-alt">Service</h5>
-                    <ul class="icon-list">
-                        <li><a href="{{ path('custom_softskills') }}">Soft Skills</a></li>
-                        <li><a href="{{ path('custom_careercounselling') }}">Career Counselling</a></li>
-                        <li><a href="{{ path('custom_communicationskills') }}">Communication Skills</a></li>
-                        <li><a href="{{ path('custom_facultytraining') }}">Faculty Training</a></li>
-                        <li><a href="{{ path('custom_placementservices') }}">Placement services</a></li>
-                    </ul>
-                </div>
-            </div>
         </div>
     </div>
 </div>
 <hr class="divider-d">
 <footer class="footer bg-dark">
     <div class="container">
-        <div class="row">
+        <div class="row" style="margin-left: 17%;">
             <div class="col-sm-6">
                 <p class="copyright font-alt">&copy; 2018&nbsp;<a href="/">Skillsfarm</a>, All Rights Reserved</p>
             </div>
