--- a/templates/home/aboutus.html.twig
+++ b/templates/home/aboutus.html.twig
@@ -33,12 +33,6 @@
                     <div class="abt-content" style="display: block;">
                         <h4><span>About</span> Us</h4>
                         <p><strong>Our Philosophy</strong></p>
-                        <p>Skills farm is an Indian job portal operating from Bengaluru, the
-                            silicon valley of India. It is established with a clear purpose of
-                            providing dream Jobs to every job seeker who can be an asset to every
-                            organization, institutions or Company .hence at skills Farm a Job
-                            seekers search for jobs ends. Our motto is to provide the best of best
-                            jobs to every jobseeker.</p>
                         <p>Skills farm is designed and led by a passionate team under the
                             leadership of &nbsp;<b>Mr SHYJU K R NAIR</b> along with young and energetic minds like
                             Mr Geo verghese, Mr Johnson Dsouza and Mr Jeffry who all have got wide and
@@ -81,7 +75,7 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="single-team">
                         <div class="team-img">
-                            <img src="/img/default.jpg" alt="jobhere">
+                            <img src="/img/shyju.jpeg" alt="jobhere">
                         </div>
                         <div class="team-content">
                             <h5>Shyju Nair</h5>
@@ -99,7 +93,7 @@
                         </div>
                         <div class="team-content">
                             <h5>GEO VARGHESE</h5>
-                            <h6>Customer service</h6>
+                            <h6>CTO</h6>
                             <h6>20angelgeo@gmail.com </h6>
                         </div>
                     </div>
