--- a/templates/employer/login.html.twig
+++ b/templates/employer/login.html.twig
@@ -49,12 +49,13 @@
                                    placeholder="Username" required/>
                         </div>
                         <div class="form-group">
-                            <input class="form-control" id="pass" type="password" name="pass"
+                            <input class="form-control" id="pass" type="password" name="pass" onkeyup='check();'
                                    placeholder="Password" required/>
                         </div>
                         <div class="form-group">
-                            <input class="form-control" id="re-password" type="password" name="re-password"
+                            <input class="form-control" id="re-password" type="password" name="re-password"  onkeyup='check();'
                                    placeholder="Re-enter Password" required/>
+                            <span id='message'></span>
                         </div>
                         <div class="form-group">
                             <button type="submit" class="btn btn-block btn-round btn-b">Register</button>
@@ -75,5 +76,17 @@
         $('#snackbar').html('{{ error.messageKey|trans(error.messageData, 'security') }}');
         showtoast();
         {% endif %}
+
+        var check = function () {
+            if (document.getElementById('pass').value ==
+                document.getElementById('re-password').value) {
+                document.getElementById('message').style.color = 'green';
+                document.getElementById('message').innerHTML = 'Matched';
+            } else {
+                document.getElementById('message').style.color = 'red';
+                document.getElementById('message').innerHTML = 'Not Matching';
+            }
+        }
     </script>
+
 {% endblock %}
