--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,13 +1,15 @@
 <footer class="footer-area">
+
     <div class="footer-top bg-opacity-dark-blue-90 ptb-60">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 pb-sm-30">
                     <div class="subscribe-text">
-                        <h3>Let us Contact you</h3>
+                        <h3><a href="{{ path('_contactus') }}">Advertise with Us</a></h3>
                     </div>
                 </div>
                 <div class="col-md-6">
+                    <h3 style="color: white;">Let us Contact you</h3>
                     <img src="/img/loading1.gif" id="notify-loader"
                          style="width: 100px;height: 73px;display: none;margin-left: 30%;"/>
                     <div class="subscribe-form" id="notify-span">
