--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -13,7 +13,7 @@
                         </li>
                     </ul>
                     <div class="social-links">
-                        <a href="#">
+                        <a href="https://www.facebook.com/Skillsfarm-1544344945813691">
                             <i class="zmdi zmdi-facebook"></i>
                         </a>
                         <a href="#">
