--- a/templates/home/contactus.html.twig
+++ b/templates/home/contactus.html.twig
@@ -10,7 +10,7 @@
                         <div class="breadcrumb-bar">
                             <ul class="breadcrumb text-center m-0">
                                 <li>
-                                    <a href="index.html">Home</a>
+                                    <a href="/">Home</a>
                                 </li>
                                 <li>Contact Us</li>
                             </ul>
@@ -69,7 +69,7 @@
                     <div class="followus">
                         <h4>Follow Us</h4>
                         <div class="social-links">
-                            <a href="#">
+                            <a href="https://www.facebook.com/Skillsfarm-1544344945813691">
                                 <i class="zmdi zmdi-facebook"></i>
                             </a>
                             <a href="#">
@@ -92,16 +92,16 @@
                         <h4>Get In Touch</h4>
                         {{ form_start(form) }}
                             <div class="col-5 pr-6">
-                             {{ form_widget(form.vc_name, { 'class':'pl-20','attr': {'placeholder': 'Name'} }) }}
+                             {{ form_widget(form.vc_name, {'value' : '', 'class':'pl-20','attr': {'placeholder': 'Name'} }) }}
                             </div>
                             <div class="col-5 pl-6">
-                             {{ form_widget(form.vc_email, { 'class':'pl-20','attr': {'placeholder': 'Email'} }) }}
+                             {{ form_widget(form.vc_email, { 'value' : '','class':'pl-20','attr': {'placeholder': 'Email'} }) }}
                             </div>
                             <div class="col-10">
-                            {{ form_widget(form.vc_subject, { 'class':'pl-20','attr': {'placeholder': 'Subject'} }) }}
+                            {{ form_widget(form.vc_subject, { 'value' : '','class':'pl-20','attr': {'placeholder': 'Subject'} }) }}
                             </div>
                             <div class="col-10">
-                             {{ form_widget(form.vc_message, { 'class':'mb-10','attr': {'placeholder': 'Message'} }) }}
+                             {{ form_widget(form.vc_message, { 'value' : '','class':'mb-10','attr': {'placeholder': 'Message'} }) }}
                             </div>
                             <div class="col-10 fix">
                                 <button type="submit" class="button submit-btn">SUBMIT</button>
@@ -224,5 +224,7 @@
         $('#snackbar').html("Your message has been successfully sent to skillsfarm team.");
         showtoast();
         {% endif %}
+        $('form').each(function() { this.reset() });
     </script>
+
 {% endblock %}
