--- a/templates/jobseeker/editEducation.html.twig
+++ b/templates/jobseeker/editEducation.html.twig
@@ -153,7 +153,7 @@
                         <div class="breadcrumb-bar">
                             <ul class="breadcrumb text-center m-0">
                                 <li>
-                                    <a href="index.html">Home</a>
+                                    <a href="/">Home</a>
                                 </li>
                                 <li>Resume</li>
                             </ul>
