--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -16,17 +16,17 @@
                         <a href="https://www.facebook.com/Skillsfarm-1544344945813691">
                             <i class="zmdi zmdi-facebook"></i>
                         </a>
-                        <a href="#">
-                            <i class="zmdi zmdi-rss"></i>
+                        <a href="https://www.instagram.com/skillsfarm/">
+                            <i class="zmdi zmdi-instagram"></i>
                         </a>
-                        <a href="#">
+                        <a href="https://plus.google.com/101772530506782576069">
                             <i class="zmdi zmdi-google-plus"></i>
                         </a>
-                        <a href="#">
-                            <i class="zmdi zmdi-pinterest"></i>
+                        <a href="www.linkedin.com/in/skills-farm-033535172">
+                            <i class="zmdi zmdi-linkedin"></i>
                         </a>
-                        <a href="#">
-                            <i class="zmdi zmdi-instagram"></i>
+                        <a href="https://twitter.com/skillsfarm2">
+                            <i class="zmdi zmdi-twitter"></i>
                         </a>
                     </div>
                 </div>
