--- a/templates/home/jobsearch.html.twig
+++ b/templates/home/jobsearch.html.twig
@@ -11,7 +11,7 @@
                         <h2 class="text-center">Find a Job</h2>
                         <div class="breadcrumb-bar">
                             <ul class="breadcrumb text-center m-0">
-                                <li><a href="index.html">Home</a></li>
+                                <li><a href="/">Home</a></li>
                                 <li>Find a Job</li>
                             </ul>
                         </div>
