--- a/templates/jobseeker/index.html.twig
+++ b/templates/jobseeker/index.html.twig
@@ -31,7 +31,7 @@
                 <div class="post-tab nav">
                     <a class="nav-link active" data-toggle="tab" href="#profile">PROFILE</a>
                     <a class="nav-link" data-toggle="tab" href="#cv_s">CVs</a>
-                    <a class="nav-link" data-toggle="tab" href="#manage">MANAGE JOBS</a>
+                    {#<a class="nav-link" data-toggle="tab" href="#manage">MANAGE JOBS</a>#}
                     <a class="nav-link" data-toggle="tab" href="#contactus">CONTACT US</a>
                 </div>
                 <!-- Tab panes -->
