--- a/templates/employer/login.html.twig
+++ b/templates/employer/login.html.twig
@@ -49,11 +49,12 @@
                                    placeholder="Username" required/>
                         </div>
                         <div class="form-group">
-                            <input class="form-control" id="pass" type="password" name="pass" onkeyup='check();'
+                            <input class="form-control" id="pass" type="password" name="pass"
                                    placeholder="Password" required/>
                         </div>
                         <div class="form-group">
-                            <input class="form-control" id="re-password" type="password" name="re-password"  onkeyup='check();'
+                            <input class="form-control" id="re-password" type="password" name="re-password"
+                                   onkeyup='check();'
                                    placeholder="Re-enter Password" required/>
                             <span id='message'></span>
                         </div>
@@ -78,14 +79,17 @@
         {% endif %}
 
         var check = function () {
-            if (document.getElementById('pass').value ==
-                document.getElementById('re-password').value) {
-                document.getElementById('message').style.color = 'green';
-                document.getElementById('message').innerHTML = 'Matched';
-            } else {
-                document.getElementById('message').style.color = 'red';
-                document.getElementById('message').innerHTML = 'Not Matching';
+            if (document.getElementById('pass').value != '' || document.getElementById('re-password').value != '') {
+                if (document.getElementById('pass').value == document.getElementById('re-password').value) {
+                    document.getElementById('message').style.color = 'green';
+                    document.getElementById('message').innerHTML = 'Matched';
+                } else {
+                    document.getElementById('message').style.color = 'red';
+                    document.getElementById('message').innerHTML = 'Not Matching';
+                }
             }
+            else
+                document.getElementById('message').innerHTML = '';
         }
     </script>
 
