--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -13,7 +13,7 @@
                     <img src="/img/loading1.gif" id="notify-loader"
                          style="width: 100px;height: 73px;display: none;margin-left: 30%;"/>
                     <div class="subscribe-form" id="notify-span">
-                        <input type="email" name="emailtonotify" id="emailtonotify" placeholder="Enter Your Email.....">
+                        <input type="email" required name="emailtonotify" id="emailtonotify" placeholder="Enter Your Email.....">
                         <button onclick="submitnotify();">Submit</button>
                     </div>
                 </div>
