--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -22,7 +22,7 @@
                         <a href="https://plus.google.com/101772530506782576069">
                             <i class="zmdi zmdi-google-plus"></i>
                         </a>
-                        <a href="www.linkedin.com/in/skills-farm-033535172">
+                        <a href="https://www.linkedin.com/in/skills-farm-033535172">
                             <i class="zmdi zmdi-linkedin"></i>
                         </a>
                         <a href="https://twitter.com/skillsfarm2">
