added 2 new pages

--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -74,10 +74,10 @@
                                         <a href="{{ path('custom_schoolaffiliation') }}">School Affiliation</a>
                                     </li>
                                     <li>
-                                        <a href="{{ path('_contactus') }}">Study Abroad</a>
+                                        <a href="{{ path('custom_studyabroad') }}">Study Abroad</a>
                                     </li>
                                     <li>
-                                        <a href="{{ path('_contactus') }}">Our Courses</a>
+                                        <a href="{{ path('custom_courses') }}">Our Courses</a>
                                     </li>
                                 </ul>
                             </li>
@@ -158,10 +158,10 @@
                                             <a href="{{ path('custom_schoolaffiliation') }}">School Affiliation</a>
                                         </li>
                                         <li>
-                                            <a href="{{ path('_contactus') }}">Study Abroad</a>
+                                            <a href="{{ path('custom_studyabroad') }}">Study Abroad</a>
                                         </li>
                                         <li>
-                                            <a href="{{ path('_contactus') }}">Our Courses</a>
+                                            <a href="{{ path('custom_courses') }}">Our Courses</a>
                                         </li>
                                     </ul>
                                 </li>
