--- a/templates/employerheader.html.twig
+++ b/templates/employerheader.html.twig
@@ -21,7 +21,7 @@
                 </li>
                 <li class="dropdown"><a href="{{ path('_employer_pricing') }}">Pricing</a>
                 </li>
-                <li class="dropdown"><a href="{{ path('_home') }}">Jobseekers</a>
+                <li class="dropdown"><a href="{{ path('_home') }}">Jobseeker</a>
                 </li>
                 <li class="dropdown"><a href="/blogs">Blogs</a>
                 </li>
