--- a/templates/employer/index.html.twig
+++ b/templates/employer/index.html.twig
@@ -359,11 +359,11 @@
                             <img src="/img/loading1.gif" id="notify-loader"
                                  style="width: 100px;height: 73px;display: none;margin-left: 30%;">
                             <div class="input-group" id="notify-span">
-                                <input class="form-control" type="email" id="email" name="email" required="required"
+                                <input class="form-control" type="email" id="emailtonotify" name="emailtonotify" required="required"
                                        placeholder="Please Leave your email address"
                                        data-validation-required-message="Please Leave your email address."
                                        required="required"/><span class="input-group-btn">
-                        <button class="btn btn-g btn-round" id="subscription-form-submit" onclick="submitnotify();">Submit</button></span>
+                            <button class="btn btn-g btn-round" id="subscription-form-submit" onclick="submitnotify();">Submit</button></span>
                             </div>
                             <div class="text-center" id="subscription-response"></div>
                         </div>
